--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite-plugin-pwa": "^0.19.7"
   },
   "dependencies": {
+    "humanize-string": "^3.0.0",
+    "plotly.js-dist": "^2.30.1",
     "query-string": "^9.0.0"
   }
 }
